--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "axios": "^1.7.2",
     "prettier": "^3.1.1"
   },
   "packageManager": "yarn@4.1.0"
